[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resource-requirements-parser"
version = "0.1.0"
description = "A library for parsing infrastructure requirements from various sources like Terraform and CloudFormation"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
    "infrastructure",
    "terraform",
    "cloudformation",
    "requirements",
    "parser",
    "finops",
    "cloud",
]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Installation/Setup",
]
dependencies = [
    "pydantic>=2.0.0",
    "python-hcl2>=4.0.0",  # For parsing Terraform files
    "pyyaml>=6.0.0",       # For parsing YAML CloudFormation templates
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
    "pre-commit>=3.3.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.23.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/resource-requirements-parser"
Documentation = "https://resource-requirements-parser.readthedocs.io/"
Repository = "https://github.com/yourusername/resource-requirements-parser.git"
"Bug Tracker" = "https://github.com/yourusername/resource-requirements-parser/issues"
Changelog = "https://github.com/yourusername/resource-requirements-parser/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/resource_requirements_parser"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=resource_requirements_parser --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["resource_requirements_parser"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
    "W0621",  # redefined-outer-name
    "W0622",  # redefined-builtin
    "W0703",  # broad-except
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.basic]
good-names = [
    "i",
    "j",
    "k",
    "ex",
    "Run",
    "_",
    "fp",
    "id",
]
